--- a/app/index.html
+++ b/app/index.html
@@ -108,6 +108,7 @@
     <script src="scripts/controllers/admin.js"></script>
     <script src="scripts/controllers/dashboard.js"></script>
     <script src="scripts/controllers/auth.js"></script>
+    <script src="scripts/controllers/vehicle.js"></script>
     <!-- endbuild -->
     <script src="scripts/config.js"></script>
 </body>
